# prooflens

./: .env.example  .gitignore  README.md  alembic.ini  plens  prooflens-pipeline.html  pyproject.toml  render.yaml
.github/workflows/: ci.yml  keep-warm.yml
deploy/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  BRAND.md  DEPLOYMENT.md  DESIGN_PRINCIPLES.md  RUNBOOK.md  TENANT_ONBOARDING.md  VERDICT_COPY.md
docs/demo/: DEMO_SCRIPT.md  PROD_FLIP_RUNBOOK.md  score_photo.py
docs/superpowers/: SCORING_ASSESSMENT_AUDIT.md  SUMMARY.md
frontend/: .dockerignore  .env.local.example  .env.production  .gitignore  BACKEND_REQUIREMENTS.md  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/scripts/: seed-demo.ts
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_review_and_absli_rename.py  0003_default_vision_groq.py  0004_hierarchy_and_result_ids.py  0005_result_source.py  0006_agent_name.py  0007_api_keys.py
prooflens-demo/: .env.example  .gitignore  README.md  app.py  compare.py  config.py  fusion.py  requirements.txt  store.py
prooflens-demo/checks/: __init__.py  _imaging.py  metadata.py  person.py  relevance.py  sharpness.py  types.py  uniqueness.py
prooflens-demo/samples/: README.md  labels.csv
prooflens-demo/static/: index.html
prooflens-demo/tests/: conftest.py  test_checks.py  test_fusion.py
prooflens-demo/vision/: __init__.py  anthropic_backend.py  base.py  gemini_backend.py  local_backend.py  openai_backend.py  stub.py
rubrics/: reasoner_v1.yaml  v1.yaml  v2.yaml  v3.yaml
scripts/: generate_demo_images.py  generate_golden.py  mint_api_key.py  sample-hierarchy.csv  seed-realistic.py  seed_dev_tenant.py  start-api.sh
scripts/lib/: seed_data.py
src/prooflens/: __init__.py  __main__.py  config.py  worker.py
tests/: conftest.py  helpers.py
tests/golden/: labels.csv  test_golden.py
tests/integration/: test_admin_and_metrics.py  test_bulk_score_api.py  (+9 more)
(+237 files in other folders)
