[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prooflens"
version = "0.1.0"
description = "Async image-authenticity scoring for insurance proof-of-meeting photos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
  # Engine (deterministic checks) — always needed
  "Pillow>=10.0",
  "imagehash>=4.3",
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "pyyaml>=6.0",
  # Config / service
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# Service runtime (api + worker + db). Not needed for the pure engine or golden tests.
service = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "cryptography>=42.0",
  "prometheus-client>=0.20",
  "structlog>=24.1",
  "httpx>=0.27",
]
# Real vision backends. NEVER installed/called in CI or tests.
# gemini / openrouter / nvidia / local_vlm need NO extra deps (stdlib HTTP);
# only the anthropic backend needs its SDK.
vision = [
  "anthropic>=0.40",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.9",
]

[project.scripts]
prooflens = "prooflens.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prooflens = ["../../rubrics/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["prooflens"]
ignore_missing_imports = true
warn_unused_ignores = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q --import-mode=importlib"
markers = [
  "golden: golden-set band+reason regression (runs as its own CI gate)",
]
